--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-icons": "^4.3.1",
     "react-multi-carousel": "^2.6.5",
     "react-scripts": "4.0.3",
+    "react-vertical-timeline-component": "^3.5.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
